Delete Items created during Prepared Stat (memory leak bug) (Bug #3451)

sql/sql_parse.cc:
  Delete Items created during Prepared Stat (memory leak bug)
sql/sql_prepare.cc:
  Delete Items created during Prepared Stat (memory leak bug)